--- a/web/src/index.css
+++ b/web/src/index.css
@@ -99,11 +99,28 @@ textarea {
   display: inline-block;
   font-weight: 700;
   padding: 0.75rem 1.5rem;
+
 }
 
 .button:hover {
   font-size: 25px; 
   padding: 0.75rem 1.5rem;
+  color: #732002;
+}
+
+.button-normal{
+  display: inline-block;
+  font-weight: 700;
+  padding: 0.75rem 1.5rem;
+  background: #D9B95B;
+  margin: 5px;
+  border-radius: 1px;
+}
+
+.button-normal:hover {
+  
+  padding: 0.75rem 1.5rem;
+  background: #f0db9b;
   color: #732002;
 }
 
