--- a/web/src/index.css
+++ b/web/src/index.css
@@ -42,14 +42,17 @@ a {
 }
 
 section {
-  max-width: 800px;
+  
+  max-width: 900px;
   margin-left: auto;
   margin-right: auto;
-  padding: 0 1.5rem;
+  padding: 0 2.5rem;
 }
 
 section h1 {
-  font-size: 3rem;
+  font-size: 2.5rem;
+  padding: 1rem;
+  text-align: center;
 }
 
 input, select, textarea {
@@ -70,30 +73,7 @@ textarea {
   resize: none;
 }
 
-.question h2 {
-  font-size: 2.5rem;
-}
 
-.question-excerpt {
-  padding: 1.5rem 0;
-  border-bottom: 1px solid #eee;
-}
-
-.question-excerpt:first-of-type {
-  padding-top: 0;
-}
-
-.question-excerpt h2 {
-  margin-top: 0;
-  font-size: 1.5rem;
-}
-
-.answer {
-  background: #f0f0f0;
-  border-radius: 4px;
-  padding: 1rem 1.5rem;
-  margin: 1rem 0;
-}
 
 .button {
   display: inline-block;
@@ -127,9 +107,10 @@ textarea {
 .right {
   float: right;
 }
-.logo{
-  height: 2rem;
+img{
+  height: 8rem;
 } 
+
 .footer{
   margin-top: 1rem;
   padding: 1rem;
